# g1

./: .clang_complete  .gitignore  .syntastic_cpp_config  CMakeLists.txt  COPYING  README.md  toolchain-x86_64-w64-mingw32.cmake
assets/: atmof_frag.glsl  atmof_vert.glsl  blurn_y_frag.glsl  char_frag.glsl  char_vert.glsl  cloud_frag.glsl  cloud_nbl_frag.glsl  copy1_frag.glsl  earth_frag.glsl  earth_nbl_frag.glsl  fb_frag.glsl  fb_vert.glsl  high_pass_frag.glsl  menu_frag.glsl  scratch_frag.glsl  sun_frag.glsl  sun_vert.glsl
assets/ships/: mumeifune.json
config/: input-bindings.json
config/ships/: index.json  mumeifune.json
config/weapons/: PW.json  index.json
include/: align-allocator.hpp  aurora.hpp  cockpit.hpp  conversion.hpp  environment.hpp  generic-data.hpp  gltf.hpp  graphics.hpp  json.hpp  localize.hpp  main_loop.hpp  menu.hpp  options.hpp  particles.hpp  physics.hpp  radar.hpp  runge-kutta-4.hpp  serializer.hpp  ship.hpp  ship_types.hpp  software.hpp  sound.hpp  steam_controller.hpp  text.hpp  ui.hpp  weapons.hpp  xsmd.hpp
include/math/: RungeKutta4.h
include/physics/: PhysicsBody.h
json-enums/: DirectionPosition.json  GLTFAccessorType.json  GLTFBufferType.json  ThrusterType.json  WeaponType.json
json-structs/: GLTF.json  GLTFAccessor.json  GLTFBuffer.json  GLTFBufferView.json  GLTFMesh.json  GLTFMeshPrimitive.json  Ship.json  ShipIndex.json  Thruster.json  Weapon.json  WeaponClass.json  WeaponClassIndex.json
shaders/: atmob_frag.glsl  atmof_frag.glsl  atmoi_frag.glsl  aurora_frag.glsl  aurora_geom.glsl  aurora_vert.glsl  avg_frag.glsl  avgnb_frag.glsl  blur0_x_frag.glsl  blur0_y_frag.glsl  blurn_x_frag.glsl  char_vert.glsl  cloud_frag.glsl  cloud_nbl_frag.glsl  cloud_vert.glsl  earth_frag.glsl  earth_nbl_frag.glsl  earth_vert.glsl  fbnb_frag.glsl  impact_frag.glsl  impact_geom.glsl  impact_vert.glsl  line_frag.glsl  line_vert.glsl  menu_vert.glsl  moon_frag.glsl  moon_vert.glsl  particle_frag.glsl  particle_geom.glsl  particle_vert.glsl  ptn_vert.glsl  scratch_frag.glsl  scratch_uniform_frag.glsl  scratch_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  sprite_frag.glsl  sprite_vert.glsl  sun_frag.glsl
software/: flight_l1.lua  flight_l2.lua  flight_l3.lua  scenario_0.lua  scenario_null.lua
src/: aurora.cpp  cockpit.cpp  conversion.cpp  environment.cpp  generic-data.cpp  gltf.cpp  graphics.cpp  json.cpp  localize.cpp  main.cpp  main_loop.cpp  menu.cpp  particles.cpp  physics.cpp  radar.cpp  runge-kutta-4.cpp  ship.cpp  ship_types.cpp  software.cpp  sound.cpp  steam_controller.cpp  text.cpp  ui.cpp  weapons.cpp  xsmd.cpp
tools/: create-scratches.rb  create-sphere.cpp  fetch-assets.rb  generate-serializer.rb  index-assets.rb  polar-to-cube.cpp
